@@ -3,34 +3,46 @@
 # Final project of Software Engineering - 2020
 
 This project was made between March and July 2020 as our final thesis project at Politecnico di Milano. <br>
-<!-- TODO: add final score -->
+ **Marco Weger** ([@marco-weger](https://github.com/marco-weger)) <br>
+ **Francesco Paterna** ([@FrancescoPaterna](https://github.com/FrancescoPaterna)) <br>
+ **Giulio Saulle** ([@aGiulioSaulle](https://github.com/GiulioSaulle))
 
-## The CG13 Team
-- ####       Marco Weger ([@marco-weger](https://github.com/marco-weger))
-- ####       Francesco Paterna ([@FrancescoPaterna](https://github.com/FrancescoPaterna))
-- ####       Giulio Saulle ([@aGiulioSaulle](https://github.com/GiulioSaulle))
 
-## How to start JARs
+## Quick Index
+* [prerequirements](#Prerequirements)
+* [get JARs files](#Get-JARs)
+* [json config](#Configuration)
+* [start Client](#Start-Client)
+* [start Server](#Start-Server)
+* [specification covered](#Specification-Covered)
+* [server status](#Santorini-Official-Server)
 
-You can find them under *deliverables/jars*
 
-### Prerequirements
+## Prerequirements
 
 You need **JavaSE 14** or higher version to run this game.    
 https://www.oracle.com/java/technologies/javase-downloads.html
 
-If you use **Windows** and want to run the game in **CLI mode**, we suggest you to use the Bash to a better expirience
+If you use **Windows** and want to run the game in **CLI mode**, we suggest you to use the Bash on [WSL](https://en.wikipedia.org/wiki/Windows_Subsystem_for_Linux) to a better expirience
 https://docs.microsoft.com/en-us/windows/wsl/install-win10
 
 
-<!--
-### GUI.jar
-Just download it and use
+## Get JARs
 
-java --module-path PATHTOJAVAFX --add-modules=javafx.controls,javafx.fxml,javafx.graphics -jar GUI.jar YOURIP
--->
+You can find them [here](https://github.com/marco-weger/ing-sw-2020-weger-paterna-saulle/tree/master/deliverables/jars) or you can generate them yourself with Maven
 
-### Configuration
+###### JARs with Maven (OPTIONAL)
+###### Client
+```bash
+mvn clean compile assembly:single -PClient
+```
+###### Server
+```bash
+mvn clean compile assembly:single -PServer
+```
+
+
+## Configuration (Optional)
 <!-- Talk about JSON and saved-match -->
 An optional [JSON file](resources/config.json) could be saved in *./resources/config.json*; if the software can't find the file it will use default value, written in square brackets.
 <br>
@@ -42,7 +54,13 @@ Allowed params:
 * disconnectTimer (used by server) [60] - timer used to handle a diconnection during a match
 * turnTimer (used by server) [180] - timer for a singel turn
 
-### Client.jar
+## Start Game
+Enjoy Santorini in GUI mode or try the 90s Experience with CLI mode.<br>
+All you need is to run your **client.jar** file and **put in the same folder** the directory [resources](https://github.com/marco-weger/ing-sw-2020-weger-paterna-saulle/tree/master/deliverables/jars) with the json file, and you will play in our Official Server (Check [here](#Santorini-Official-Server) if our Server is available) <br>
+You can also play Santorini in your own Server, just run **Server.jar** on your pc, and set your ip on JSON file. (if you prefer, **you can avoid to use JSON file**,just don't put the directory resources in client.jar's folder, the game will ask you the ip and the port that you want to use).
+
+
+#### Start Client
 ```bash
 java -jar Client.jar
 ```
@@ -50,8 +68,8 @@ or
 ```bash
 java -jar Client.jar [CLI/GUI]
 ```
-If you decide to run it withouth the arg, you will be asked by the console.
-### Server.jar
+If you decide to run it withouth the arg, you will play in GUI mode.
+#### Start Server
 ```bash
 java -jar Server.jar
 ```
@@ -60,11 +78,11 @@ java -jar Server.jar
 
 PATHTOJAVAFX is the path to JavaFX 12 (the lib folder!!) and changes depending on where you saved your JavaFX on your PC.
 
-### Testing persistence and reconnection
+#### Testing persistence and reconnection
 When reconnecting, remember to vote for the same map the game was being played on before disconnection!
 -->
 
-## Work progress
+## Specification Covered
 | Functionality | State |
 |:-----------------------|:------------------------------------:|
 | Basic rules | [![GREEN](https://placehold.it/15/44bb44/44bb44)](#) |
